# gcloud_streamlit

./: .dockerignore  Dockerfile  LICENSE  README.md  app.py  cloudbuild.yaml  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: cloud-run-deploy.yml
hellolit/: app.py  requirements.txt
pages/: 1_plotting.py  5_plot_ellipse.py  6_wavfile.py  7_folium_map.py
tools/: firebase_adduser.py
tools/simple_login/: MEMO.md  index.html  index.js  server.py
